﻿i-MSCP ChangeLog

------------------------------------------------------------------------------------------------------------------------
Git 1.1.x
------------------------------------------------------------------------------------------------------------------------

CONFIGS
	Fixed: Access to error documents is forbiden in some contexts ( Apache )
	Fixed: Domain aliases and subdomains can't follow sylinks from customer homedir

BACKEND
	Fixed: Fcgi wrapper is not created in some contexts ( apache_fcgid )
	Fixed: Pool configuration file is not created in some contexts ( apache_php_fpm )

GUI
	Fixed: CSS loading order
	Replaced: i-MSCP jQuery tooltip plugin by jQuery UI tooltip widget

L10N
	Fixed: Don't throw any exception when a locale is not valid. Fallback to the default locale instead

VENDOR
	Added: pGenerator jQuery plugin v1.0.0

TICKETS
	Fixed #1187: Enhancement - Password generator for any password field
	Fixed #1188: Bug - apache_fcgid - Fcgid wrapper not created in some contexts
	Fixed #1191: Bug - Domains which belong to disabled accounts are no longer reachable after an i-MSCP reconfiguration

------------------------------------------------------------------------------------------------------------------------
1.1.18
------------------------------------------------------------------------------------------------------------------------

2014-11-22: Laurent Declercq
	RELEASE i-MSCP 1.1.18

ENGINE
	Fixed: Unable to remove the domain aliases and the subdomains ( Web folder protection )

GUI
	Added: iMSCP_Events_Aggregator::getEventManager() method
	Changed: Configuration objects are now cached for better performances
	Changed: Mail body footprints are now stored in flat file instead of database ( Exception mail writer )
	Changed: Mails are now sent every 24 hours in context of an identical exception ( Exception mail writer )
	Changed: Writers are now lazy-loaded ( Exception writers )