@@ -226,6 +226,7 @@ CMD_TAR = /bin/tar
 CMD_USERADD = /usr/sbin/useradd
 CMD_USERDEL = /usr/sbin/userdel
 CMD_USERMOD = /usr/sbin/usermod
+CMD_SYSCTL = /sbin/sysctl
 CMD_WHICH = /usr/bin/which
 CMD_XZ = /usr/bin/xz
 PEAR_DIR = /usr/share/php
