@@ -1,0 +1,2 @@
+# Promote secondaries IPs when primary are removed
+net.ipv4.conf.all.promote_secondaries=1
