@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<install>
+    <folders mode="0755" user="${ROOT_USER}" group="${ROOT_GROUP}">${ROOT_CONF}/sysctl.d</folders>
+    <copy_config mode="0644" user="${ROOT_USER}" group="${ROOT_GROUP}">${ROOT_CONF}/sysctl.d/imscp.conf</copy_config>
+</install>
