@@ -26,6 +26,7 @@
 # @category     i-MSCP
 # @copyright    2010-2014 by i-MSCP | http://i-mscp.net
 # @author       Daniel Andreca <sci2tech@gmail.com>
+# @author		Laurent Declercq <l.declercq@nuxwin.com>
 # @link         http://i-mscp.net i-MSCP Home Site
 # @license      http://www.gnu.org/licenses/gpl-2.0.html GPL v2
 
@@ -35,6 +36,7 @@ use strict;
 use warnings;
 
 use iMSCP::Debug;
+use iMSCP::Database;
 use iMSCP::Execute;
 use parent 'Common::Object';
 
@@ -56,11 +58,11 @@ use parent 'Common::Object';
 
 sub process
 {
-	my $self = $_[0];
+	$ENV{'IMSCP_BACKEND'} = 1; # Tells to the imscp-net-interfaces-mngr script that we are running from the backend
 
 	my ($stdour, $stderr);
 	my $rs = execute(
-		"$main::imscpConfig{'CMD_PERL'} $main::imscpConfig{'TOOLS_ROOT_DIR'}/imscp-net-interfaces-mngr stop",
+		"$main::imscpConfig{'CMD_PERL'} $main::imscpConfig{'TOOLS_ROOT_DIR'}/imscp-net-interfaces-mngr restart",
 		\$stdour,
 		\$stderr
 	);
@@ -68,16 +70,23 @@ sub process
 	error($stderr) if $stderr && $rs;
 	return $rs if $rs;
 
-	$rs = execute(
-		"$main::imscpConfig{'CMD_PERL'} $main::imscpConfig{'TOOLS_ROOT_DIR'}/imscp-net-interfaces-mngr start",
-		\$stdour,
-		\$stderr
-	);
-	debug($stdour) if $stdour;
-	error($stderr) if $stderr && $rs;
-	return $rs if $rs;
+	delete $ENV{'IMSCP_BACKEND'};
 
-	0;
+	my $db = iMSCP::Database->factory();
+
+	my $rdata = $db->doQuery('dummy', "DELETE FROM server_ips WHERE ip_status = 'todelete'");
+	unless (ref $rdata eq 'HASH') {
+		error($rdata);
+		$rs = 1;
+	}
+
+	$rdata = $db->doQuery('dummy', "UPDATE server_ips SET ip_status = 'ok'");
+	unless (ref $rdata eq 'HASH') {
+		error($rdata);
+		$rs |= 1;
+	}
+
+	$rs;
 }
 
 =back
