@@ -449,11 +449,15 @@ class iMSCP_Initializer
 	 */
 	protected function initializeLocalization()
 	{
-		$locale = iMSCP_Registry::set(
-			'user_def_lang', isset($_SESSION['user_def_lang'])
-				? $_SESSION['user_def_lang']
-				: ((isset($this->config['USER_INITIAL_LANG'])) ? $this->config['USER_INITIAL_LANG'] : 'auto')
-		);
+		if(PHP_SAPI != 'cli') {
+			$locale = iMSCP_Registry::set(
+				'user_def_lang', isset($_SESSION['user_def_lang'])
+					? $_SESSION['user_def_lang']
+					: ((isset($this->config['USER_INITIAL_LANG'])) ? $this->config['USER_INITIAL_LANG'] : 'auto')
+			);
+		} else {
+			$locale = 'en_GB';
+		}
 
 		$trFilePathPattern = $this->config['GUI_ROOT_DIR'] . '/i18n/locales/%s/LC_MESSAGES/%s.mo';
 
