@@ -5,14 +5,17 @@ Git 1.1.x
 ------------------------------------------------------------------------------------------------------------------------
 
 CONFIGS
+	Added: Sysctl configuration file for secondary IP promoting ( /etc/sysctl.d/imscp.conf file )
 	Fixed: Access to error documents is forbiden in some contexts ( Apache )
 	Fixed: Domain aliases and subdomains can't follow sylinks from customer homedir
 
 BACKEND
 	Fixed: Fcgi wrapper is not created in some contexts ( apache_fcgid )
 	Fixed: Pool configuration file is not created in some contexts ( apache_php_fpm )
+	Fixed: Network manager must not remove SSH connection IP
 
 GUI
+	Changed: All network interfaces are now selectable, even if they are not up
 	Fixed: CSS loading order
 	Replaced: i-MSCP jQuery tooltip plugin by jQuery UI tooltip widget
 
@@ -26,6 +29,7 @@ TICKETS
 	Fixed #1187: Enhancement - Password generator for any password field
 	Fixed #1188: Bug - apache_fcgid - Fcgid wrapper not created in some contexts
 	Fixed #1191: Bug - Domains which belong to disabled accounts are no longer reachable after an i-MSCP reconfiguration
+	Fixed #1192: Bug - Network manager - Server connection lost
 
 ------------------------------------------------------------------------------------------------------------------------
 1.1.18
